--- a/angular.json
+++ b/angular.json
@@ -74,7 +74,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -115,5 +121,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "5d25a276-248c-49f4-b75e-0502ad6ef503"
   }
 }
